UPDATE: Update logo image and center buttons FIX: Center buttons and adjust logo styling FIX: Remove hover effect on hero image FIX: Center buttons in index.css UPDATE: Change favicon to new logo UPDATE: Change favicon in about.html FIX: Adjust logo styling in about.css FIX: Adjust logo styling in index.css FIX: Center buttons in index.css FIX: Remove hover effect on hero image FIX: Fixed mobile responsivesness for the button on smaller screens

--- a/CSS/about.css
+++ b/CSS/about.css
@@ -56,7 +56,8 @@ body {
 .primary-navbar img {
     height: 50px;
     width: 50px;
-    border-radius: 50%;
+    background-color: white;
+    border-radius: 100%;
     margin: 0 auto;
     flex-shrink: 0;
 }
